# ExternalDeptBackend

./: .env.example  Cargo.toml  Dockerfile  README.md  \  diesel.toml  docker-compose.yml
.github/workflows/: deploy.yml  rust.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-12-12-214746_set_up_database/: up.sql
migrations/2024-12-25-221730_rebase_db/: up.sql
migrations/2025-01-05-162627_add_team/: up.sql
migrations/2025-01-05-164355_user_team_id_not_null/: up.sql
migrations/2025-01-05-165244_add_email_to_hackathon_team_2024/: up.sql
migrations/2025-01-05-202614_add_team_trigger_count_member/: up.sql
src/: main.rs  server.rs
src/api/: mod.rs
src/api/admin/: get.rs  post.rs
src/api/hackathon/: post.rs
src/api/hackathon_2024/: mod.rs
src/api/test/: get.rs
src/api/user/: get.rs  local.rs  post.rs
src/api_query/: mod.rs  pong.rs  user.rs
src/data/: admin_match.rs  claims.rs  mod.rs  user.rs
src/data/hackathon_2024/: api.rs  mod.rs  team.rs  user.rs
src/database_components/: database_common.rs  database_sqlx.rs  mod.rs
src/database_components/diesel/: database_diesel.rs  mod.rs
src/diesel/: configurator.rs  database_diesel.rs  mod.rs  prelude.rs  schema.rs
src/diesel/models/: mod.rs
src/diesel/utils/: mod.rs
src/dto/request/: mod.rs  user.rs
src/dto/response/: admin.rs  mod.rs  user.rs
src/error/: api_error.rs  send_email.rs
src/middleware/: admin_match.rs  admin_token_match.rs  claims.rs  get_user.rs  mod.rs
src/models/admin/: admin_jwt.rs  mod.rs
src/models/hackathon_2024/: user.rs
src/swagger/: mod.rs
src/tests/: main.rs  mod.rs  test.rs
src/utils/: env_configuration.rs  mod.rs  prelude_api.rs  security.rs
src/utils/actions/: create_jwt.rs  decode_jwt.rs  mod.rs  (+1 more)
(+72 files in other folders)
