[package]
name = "ExternalDeptBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["multipart", "cookies", "json", "stream"] }
thiserror = "2.0.5"
log = "0.4.22"
diesel = { version = "2.2.0", features = ["postgres"] }
env_logger = "0.11.5"
eyre = "0.6"
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
rocket_cors = "0.6.0"
native-tls = "0.2.12"
postgres-native-tls = "0.5.0"
tokio-postgres = { version = "0.7" }