[package]
name = "ExternalDeptBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
dotenvy = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.5"
log = "0.4.22"
diesel = { version = "2.2.6", features = ["postgres", "chrono", "serde_json", "r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
lettre = "0.11.11"
bcrypt = "0.16.0"
rocket_cors = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.1"
diesel_migrations = "2.0"
utoipa = { version = "5.1.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "7.1.1-rc.0", features = ["rocket"] }

[default.databases]
postgres = { url = "{env:DATABASE_URL}" }
